# athena

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: block-secret-writes.sh  check-docs-drift.sh  ruff-fix.sh  session-start.sh
.claude/skills/adr-workflow/: SKILL.md
.claude/skills/commit-discipline/: SKILL.md
.claude/skills/filing-analysis/: SKILL.md
.claude/skills/live-validation/: SKILL.md
.claude/skills/wall-guard/: SKILL.md
apps/api/: config.py  db.py  main.py
apps/api/edgar/: client.py  sections.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_research_schema.py  0002_filing_chunks_semantic_search.py  0003_period_end_date_not_null.py  0004_sec_ticker_reference.py  0005_lazy_summary_nullable.py
apps/api/research/: batch.py  compare.py  embeddings.py  find.py  qa.py  repair.py  repository.py  rerank.py  router.py  service.py  summarizer.py  ticker_reference.py
apps/api/tests/: conftest.py  test_batch.py  test_compare.py  test_config.py  test_edgar_client.py  test_embeddings.py  test_find.py  test_health.py  test_migration.py  test_qa.py  test_repair.py  test_repository.py  test_rerank.py  test_router.py  test_sections.py  test_service.py  test_summarizer.py  test_ticker_reference.py
apps/web/: README.md  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  styles.css
apps/web/src/components/: FindTab.tsx  PassagesTab.tsx  QueryRow.tsx  ResearchTab.tsx  TopBar.tsx
docs/decisions/: 0001-use-monorepo.md  0002-technology-stack.md  0003-postgres-as-ontology-not-foundry.md  0004-knowledge-in-git-not-memory-server.md  0005-first-slice-edgar-ingestion-and-postgres-schema.md  0006-semantic-search-embeddings.md  0007-cited-question-answering-no-verdicts.md  0008-temporal-corpus-multiple-filings-per-company.md  0009-change-detection-grounded-comparison-at-qa-time.md  0010-sec-ticker-reference-authoritative-identity-cached-in-postgres.md  0011-cross-company-query-find-first-funnel-bounded-compare.md  0012-compare-mode-BUILD-REVIEW.md  0012-compare-mode-REVIEW.md  0012-compare-mode.md  0013-find-cross-encoder-rerank.md  0014-lazy-on-demand-summarisation.md  0015-summariser-model-tier-AB.md  0015-summariser-model-tier.md  0016-single-name-valuation-snapshot-REVIEW.md  0016-single-name-valuation-snapshot-decision-support.md
docs/domain/: sp100-tickers.txt
docs/superpowers/plans/: 2026-07-04-athena-scaffold.md  2026-07-04-first-research-slice.md  adr-0013-find-rerank-REVALIDATION.md  adr-0013-find-rerank-findings-and-proposal.md  adr-0013-find-rerank-validation-RESULTS.md  adr-0013-find-rerank-validation-plan.md
docs/superpowers/specs/: 2026-07-04-first-research-slice-design.md
