[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "athena"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx2>=0.28",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "anthropic>=0.40",
    "beautifulsoup4>=4.12",
    "voyageai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx2>=0.28",
    "ruff>=0.5",
    "mypy>=1.10",
]
# ADR-0013: the FIND cross-encoder reranker. A heavy dependency (torch) kept
# out of the base and dev installs on purpose, so the test suite / CI never
# pays the torch tax. Reranking is OFF by default and opt-in per request, so the
# default FIND path never needs this. Install with `pip install -e '.[rerank]'`
# to enable the opt-in path; opting in (rerank=true) without it raises a clear
# error naming this extra — there is no silent cosine fallback.
rerank = [
    "sentence-transformers>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"
pythonpath = ["."]
